--- a/java/lingoport/com/lingoport/locales/resources_en_US.properties
+++ b/java/lingoport/com/lingoport/locales/resources_en_US.properties
@@ -1,4 +1,4 @@
 key1=This is some text in U.S. English
 key2=This is more test in U.S. English
 ICU.key3={days, plural, =0 {Your trial expires today!} =1 {Your trial expires tomorrow!} other {Your trial will expire in {days} days.}}
-ICU.key4={count, plural, =1 {Child}  }
+ICU.key4={count, plural, =1 {Child} other {Children}  }
